objects/GPO_Soft_Headers__c.object
<CustomObject>
    <description>Maintaining the soft header fields and their list values.</description>
    <fields>
        <fullName>GPO_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GPO Group</label>
        <referenceTo>GPO_Group__c</referenceTo>
        <relationshipLabel>GPO Soft Headers</relationshipLabel>
        <relationshipName>GPO_Soft_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SoftHeader_Type__c</fullName>
        <label>SoftHeader_Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO Number</fullName>
                </value>
                <value>
                    <fullName>Cost Center</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SoftHeader_Value__c</fullName>
        <description>Soft Header Values (able to edit/add by Admins)</description>
        <inlineHelpText>The field&apos;s text that will appear on the page.</inlineHelpText>
        <label>SoftHeader_Value</label>
        <length>22</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GPO Soft Header</label>
    <nameField>
        <label>GPO Soft Headers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GPO Soft Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SoftHeaderVal_Length_Verification</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(ISPICKVAL(SoftHeader_Type__c,&apos;Desktop&apos;),((LEN(SoftHeader_Value__c)) &gt; 12)),
AND(ISPICKVAL(SoftHeader_Type__c,&apos;Cost Center&apos;),((LEN(SoftHeader_Value__c)) &gt; 20)),
AND(ISPICKVAL(SoftHeader_Type__c,&apos;Release&apos;),((LEN(SoftHeader_Value__c)) &gt; 20))
)</errorConditionFormula>
        <errorMessage>Desktop Value should not be more than 12 characters.
Cost Center value shouldn&apos;t be  more than 20 characters.
Release value shouldn&apos;t be  more than 20 characters.</errorMessage>
    </validationRules>
</CustomObject>